refactor: synchronize project roles instead of teams
Signed-off-by: Jonathan Howard <jonathan.w.howard@lmco.com>